<resources>
    <string name="app_name">My Flight</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">prathamesh.bagekari@spit.ac.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Countries">
        <item>Washington DC</item>
        <item>New York</item>
        <item>Toronto</item>
        <item>San Antonio</item>
        <item>Philadelphia</item>
        <item>Long Island</item>
    </string-array>
    <string name="attempt_string">Number of attempts remaining:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="edit">EDIT</string>
    <string name="_email">Email:</string>
    <string name="name">Name:</string>
    <string name="title_activity_maps">Map</string>
    <string name="buy_now">BUY NOW</string>
</resources>
